; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_effect.c_free_effect.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_effect.c_free_effect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ID3DXEffectImpl = type { i32, i64, %struct.TYPE_4__*, i32 }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 (%struct.TYPE_4__*)* }

@.str = private unnamed_addr constant [16 x i8] c"Free effect %p\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ID3DXEffectImpl*)* @free_effect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_effect(%struct.ID3DXEffectImpl* %0) #0 {
  %2 = alloca %struct.ID3DXEffectImpl*, align 8
  store %struct.ID3DXEffectImpl* %0, %struct.ID3DXEffectImpl** %2, align 8
  %3 = load %struct.ID3DXEffectImpl*, %struct.ID3DXEffectImpl** %2, align 8
  %4 = call i32 @TRACE(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), %struct.ID3DXEffectImpl* %3)
  %5 = load %struct.ID3DXEffectImpl*, %struct.ID3DXEffectImpl** %2, align 8
  %6 = getelementptr inbounds %struct.ID3DXEffectImpl, %struct.ID3DXEffectImpl* %5, i32 0, i32 3
  %7 = call i32 @d3dx9_base_effect_cleanup(i32* %6)
  %8 = load %struct.ID3DXEffectImpl*, %struct.ID3DXEffectImpl** %2, align 8
  %9 = getelementptr inbounds %struct.ID3DXEffectImpl, %struct.ID3DXEffectImpl* %8, i32 0, i32 2
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %11 = icmp ne %struct.TYPE_4__* %10, null
  br i1 %11, label %12, label %24

12:                                               ; preds = %1
  %13 = load %struct.ID3DXEffectImpl*, %struct.ID3DXEffectImpl** %2, align 8
  %14 = getelementptr inbounds %struct.ID3DXEffectImpl, %struct.ID3DXEffectImpl* %13, i32 0, i32 2
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  %19 = load i32 (%struct.TYPE_4__*)*, i32 (%struct.TYPE_4__*)** %18, align 8
  %20 = load %struct.ID3DXEffectImpl*, %struct.ID3DXEffectImpl** %2, align 8
  %21 = getelementptr inbounds %struct.ID3DXEffectImpl, %struct.ID3DXEffectImpl* %20, i32 0, i32 2
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %21, align 8
  %23 = call i32 %19(%struct.TYPE_4__* %22)
  br label %24

24:                                               ; preds = %12, %1
  %25 = load %struct.ID3DXEffectImpl*, %struct.ID3DXEffectImpl** %2, align 8
  %26 = getelementptr inbounds %struct.ID3DXEffectImpl, %struct.ID3DXEffectImpl* %25, i32 0, i32 1
  %27 = load i64, i64* %26, align 8
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %34

29:                                               ; preds = %24
  %30 = load %struct.ID3DXEffectImpl*, %struct.ID3DXEffectImpl** %2, align 8
  %31 = getelementptr inbounds %struct.ID3DXEffectImpl, %struct.ID3DXEffectImpl* %30, i32 0, i32 1
  %32 = load i64, i64* %31, align 8
  %33 = call i32 @IUnknown_Release(i64 %32)
  br label %34

34:                                               ; preds = %29, %24
  %35 = load %struct.ID3DXEffectImpl*, %struct.ID3DXEffectImpl** %2, align 8
  %36 = getelementptr inbounds %struct.ID3DXEffectImpl, %struct.ID3DXEffectImpl* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 8
  %38 = call i32 @IDirect3DDevice9_Release(i32 %37)
  ret void
}

declare dso_local i32 @TRACE(i8*, %struct.ID3DXEffectImpl*) #1

declare dso_local i32 @d3dx9_base_effect_cleanup(i32*) #1

declare dso_local i32 @IUnknown_Release(i64) #1

declare dso_local i32 @IDirect3DDevice9_Release(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
